Thêm 1 dòng code nữa nha

--- a/main.ipynb
+++ b/main.ipynb
@@ -417,6 +417,23 @@
    "source": [
     "df.loc[df.item_name == 'Chicken Salad Bowl']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Anh Khôi đẹp trai nhửt thế gian\n"
+     ]
+    }
+   ],
+   "source": [
+    "print ('Anh Khôi đẹp trai nhửt thế gian')"
+   ]
   }
  ],
  "metadata": {
